tests/NormalTests/paczka1/fuzzy1/55550870.err
Error in line 9: 7Mv S988 75,9
Error in line 10: 7Mv S962 60,7
Error in line 17: 7Mv S962 28,2
Error in line 27: 89YRQZECcA S500 45,2
Error in line 28: 89YRQZECcA S962 84,3
Error in line 20: 7Mv S500 2,7
